--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "restore": "node restore-index.js"
   },
   "dependencies": {
+    "framer-motion": "^12.34.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
